--- a/code/maintenance.kv
+++ b/code/maintenance.kv
@@ -40,6 +40,7 @@
                 ImageButton:
                     source: 'icos/arrow_back.ico'
                     on_release: app.go_menu()
+                    on_release: root.clear("all")
             BoxLabel:
                 size_hint_x: .3
             BoxLabel:
