--- a/code/implement.kv
+++ b/code/implement.kv
@@ -41,7 +41,7 @@
                 source: 'icos/arrow_back.ico'
                 size_hint: .1, .7
                 on_release: app.go_menu()
-                #on_release: root.clear()
+                on_release: root.clear()
                 on_release: seeker.text = message.text = ""
             BoxLabel:
                 size_hint_x: .65
